--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -69,6 +69,7 @@
       margin: 20px; /* add some margin to the icons */
       color: #666; /* adjust the color as needed */
     }
+
    </style>
   </head>
   <body>
@@ -77,7 +78,7 @@
       <a href="#home"><i class="fas fa-arrow-up"></i></a>
     </div>
     <!-- navgaition menu -->
-    <nav>
+<nav>
       <div class="navbar">
        
         <ul class="menu">
@@ -85,7 +86,7 @@
           <li><a href="#about">About</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#services">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href    ="#contact">Contact</a></li>
           <div class="cancel-btn">
             <i class="fas fa-times"></i>
           </div>
@@ -228,6 +229,6 @@
   </div>
 </footer>
 
-    <script src="script.js"></script>
+    <script src="{% static "js/script.js" %}"></script>
   </body>
 </html>
